--- a/build.gradle
+++ b/build.gradle
@@ -43,22 +43,26 @@ dependencies {
     testImplementation('org.seleniumhq.selenium:selenium-safari-driver:3.141.59') { transitive = false }
 
     /*
-    * JUnit5
+    * JUnit5 - Jupiter: API, Engine
     */
     // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
-    testImplementation('org.junit.jupiter:junit-jupiter-api:5.6.0-RC1')
+    testImplementation('org.junit.jupiter:junit-jupiter-api:5.6.0')
 
     // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine
-    testImplementation('org.junit.jupiter:junit-jupiter-engine:5.6.0-RC1')
-
-    // https://mvnrepository.com/artifact/org.junit.vintage/junit-vintage-engine
-    testImplementation('org.junit.vintage:junit-vintage-engine:5.6.0-RC1')
+    testImplementation('org.junit.jupiter:junit-jupiter-engine:5.6.0')
 
     /*
+    * JUnit5 - Vintage
+    */
+    // https://mvnrepository.com/artifact/org.junit.vintage/junit-vintage-engine
+    testImplementation('org.junit.vintage:junit-vintage-engine:5.6.0')
+
+    /*
+    * JUnit5 - Platform: Runner
     * Enable use of the JUnitPlatform Runner within the IntelliJ
     */
     // https://mvnrepository.com/artifact/org.junit.platform/junit-platform-runner
-    testImplementation('org.junit.platform:junit-platform-runner:1.6.0-RC1')
+    testImplementation('org.junit.platform:junit-platform-runner:1.6.0')
 
     /*
     * Allure
