--- a/src/test/resources/selenide.properties
+++ b/src/test/resources/selenide.properties
@@ -7,13 +7,13 @@
 # Base url for open() function calls
 # Can be configured either programmatically or by system property "-Dselenide.baseUrl=http://myhost".
 # Default value: http://localhost:8080
-selenide.baseUrl=https://gitlab.com
+selenide.baseUrl=https://www.learnthat.org
 #
 #
 # Timeout in milliseconds to fail the test, if conditions still not met
 # Can be configured either programmatically or by system property "-Dselenide.timeout=10000"
 # Default value: 4000 (milliseconds)
-selenide.timeout=80000
+selenide.timeout=5000
 #
 #
 # Which browser to use.
