Change version name

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # @author ngoanh2n@gmail.com (Ho Huu Ngoan)
 
-version = v1.0.0
+version = 1.0.0
 group   = com.github.ngoanh2n
 description = 'Example project using Selenide, JUnit5, Allure for Test Automation in Java'
