--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,3 @@
-# @author ngoanh2n@gmail.com (Ho Huu Ngoan)
-
-version = 1.0.0
-group   = com.github.ngoanh2n
-description = 'Example project using Selenide, JUnit5, Allure for Test Automation in Java'
+prj.version = 1.1.0
+prj.groupId = com.github.ngoanh2n
+prj.desc    = Example project using Selenide, JUnit5, Allure for Test Automation in Java
