--- a/gradle/helpers.gradle
+++ b/gradle/helpers.gradle
@@ -11,6 +11,7 @@ ext {
             config: { -> return root.gradle().resolve("config") },
     ]
     config = [
+            test       : { -> return gradle.config().resolve("test.gradle") },
             compilation: { -> return gradle.config().resolve("compilation.gradle") },
     ]
 }
