--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -1,11 +1,14 @@
 /**
  * Author: ngoanh2n
  */
+//file:noinspection GroovyAssignabilityCheck
+
 ext {
     versions = [
             selenide: { -> return "6.10.2" },
             jupiter : { -> return "5.10.0" },
             allure  : { -> return "2.24.0" },
             slf4j   : { -> return "2.0.9" },
+            aspectj   : { -> return "1.9.1" },
     ]
 }
