Update reference link

--- a/gradle/config/allure.gradle
+++ b/gradle/config/allure.gradle
@@ -1,5 +1,6 @@
 /**
  * Author: ngoanh2n
+ * @see <a href="https://github.com/allure-framework/allure-gradle">Allure plugin for Gradle</a>
  */
 allure {
     version = "${versions.allure}"
