--- a/gradle/config/dependencies.gradle
+++ b/gradle/config/dependencies.gradle
@@ -3,11 +3,12 @@
  */
 repositories {
     mavenCentral()
-    maven { url "https://plugins.gradle.org/m2/" }
 }
 
 dependencies {
-    implementation("com.codeborne:selenide:${versions.selenide}")
+    implementation("com.codeborne:selenide:${versions.selenide}") {
+        targetConfiguration = "compile"
+    }
     implementation("org.slf4j:slf4j-api:${versions.slf4j}")
 
     testImplementation("io.qameta.allure:allure-junit5:${versions.allure}")
