--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
     }
     repositories {
         mavenCentral()
-        maven { url "https://plugins.gradle.org/m2/" }
+        maven { url("https://plugins.gradle.org/m2/") }
     }
     dependencies {
         classpath("io.qameta.allure.gradle.allure:allure-plugin:2.11.2")
