Update: gradle.config.test

--- a/gradle/config/test.gradle
+++ b/gradle/config/test.gradle
@@ -1,27 +1,17 @@
+//file:noinspection GroovyAssignabilityCheck
+
 /**
  * Author: ngoanh2n
  * @see <a href="https://docs.gradle.org/current/userguide/java_testing.html">Testing in Java & JVM projects</a>
+ * @see <a href="https://docs.gradle.org/current/dsl/org.gradle.api.reporting.ReportingExtension.html">ReportingExtension</a>
  */
-//file:noinspection GroovyAssignabilityCheck
 
 reporting {
-    baseDir = "$buildDir/reports"
+    baseDir = layout.buildDirectory.locationOnly.get().file("reports").asFile
+    testResultsDirName = reporting.baseDir
 }
-testResultsDirName = reporting.baseDir
 
 test {
-    /* Make failing tests do not fail the task */
-    ignoreFailures = true
-    /* If any upToDateWhen spec returns false, the task is considered out of date. */
-    /* If they return true, Gradle does the normal behavior of checking input/output files. */
-    outputs.upToDateWhen { false }
-
-    reports {
-        junitXml {
-            mergeReruns = true
-            outputPerTestCase = true
-        }
-    }
     /* Enable JUnit Platform (JUnit 5) support, default is JUnit */
     useJUnitPlatform {
         /* Filter by engines */
@@ -32,6 +22,21 @@ test {
         //includeTags "fast", "smoke"
         //excludeTags "slow", "ci"
     }
+
+    /* Make failing tests do not fail the task */
+    ignoreFailures = true
+
+    /* If any upToDateWhen spec returns false, the task is considered out of date. */
+    /* If they return true, Gradle does the normal behavior of checking input/output files. */
+    outputs.upToDateWhen { false }
+
+    reports {
+        junitXml {
+            mergeReruns = true
+            outputPerTestCase = true
+        }
+    }
+
     testLogging {
         /* To show standard out and standard error of the test JVM(s) on the console */
         showStandardStreams = true
@@ -42,5 +47,5 @@ test {
     /* When the JVM starts, it uses the JVMs platform encoding */
     systemProperty("file.encoding", "UTF-8")
     systemProperty("junit.jupiter.extensions.autodetection.enabled", "true")
-    systemProperties = System.getProperties() as Map<String, ?>
+    systemProperties.putAll(System.getProperties() as Map<?, ?>)
 }
