--- a/gradle/config/compilation.gradle
+++ b/gradle/config/compilation.gradle
@@ -2,8 +2,7 @@
  * Author: ngoanh2n
  */
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    //sourceCompatibility = JavaVersion.VERSION_17
 }
 
 compileJava {
