--- a/gradle/config/dependencies.gradle
+++ b/gradle/config/dependencies.gradle
@@ -14,4 +14,5 @@ dependencies {
     testImplementation("io.qameta.allure:allure-selenide:${versions.allure}")
     testImplementation("org.junit.jupiter:junit-jupiter:${versions.jupiter}")
     testImplementation("org.slf4j:slf4j-log4j12:${versions.slf4j}")
+    testImplementation("com.github.ngoanh2n:commons-allure:${versions.commons}")
 }
