--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -11,5 +11,6 @@ ext {
             slf4j   : { -> return "2.0.12" },
             aspectj : { -> return "1.9.21.1" },
             commons : { -> return "1.4.0" },
+            lombok : { -> return "1.18.30" },
     ]
 }
