--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
-prj.version = 1.1.0
+prj.version = 1.2.0
 prj.groupId = com.github.ngoanh2n
-prj.desc    = Example project using Selenide, JUnit5, Allure for Test Automation in Java
+prj.desc    = Example project using Selenide, JUnit5, Allure for Automation Test in Java
