[workflow] Update schedule for devele-runs.yml

--- a/.github/workflows/delete-runs.yml
+++ b/.github/workflows/delete-runs.yml
@@ -1,7 +1,7 @@
 name: Delete old workflow runs
 on:
   schedule:
-    - cron: "0 0 1 * *"
+    - cron: "0 0 * * 0"
   push:
     branches:
       - develop
@@ -17,5 +17,5 @@ jobs:
         with:
           token: ${{ github.token }}
           repository: ${{ github.repository }}
-          retain_days: 30
-          keep_minimum_runs: 6
+          retain_days: 1
+          keep_minimum_runs: 0
